# ox-whisper

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  install.sh  release-please-config.json
.github/workflows/: ci.yml  docker-release.yml  release-please.yml  release.yml
docs/: ROADMAP.md  benchmarks.md  experiments.md
docs/plans/: 2026-03-07-improvements.md  2026-03-07-v02-openai-compatible-api.md  2026-03-07-v03-dx-features.md  2026-03-08-sherpa-onnx-update.md
scripts/: download-models.sh
src/: audio.rs  chunking.rs  config.rs  detect.rs  diarize.rs  diarize_tests.rs  formats.rs  handler_openai.rs  handler_stream.rs  handlers.rs  main.rs  metrics.rs  models.rs  openai.rs  paragraphs.rs  paragraphs_tests.rs  pii.rs  pii_tests.rs  pool.rs  punctuate.rs  recognizer.rs  spelling.rs  spelling_tests.rs  streaming.rs  transcribe.rs  upload.rs  vad.rs  words.rs  ws_handler.rs  ws_session.rs  ws_types.rs
src/smart_format/: mod.rs  ru.rs  tests.rs
tests/: ws_test.py
