[package]
name = "ox-whisper"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-rs = { path = "vendor/sherpa-rs", default-features = false }
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
regex = "1"
tokio-stream = "0.1"
futures-core = "0.3"
strsim = "0.11"
