[package]
name = "ox-whisper"
version = "0.6.1"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-rs = { path = "vendor/sherpa-rs", default-features = false }
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
regex = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
tokio-stream = "0.1"
futures-core = "0.3"
strsim = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1
